setup of start page font, display , design of start quiz button, no functionality yet

--- a/index.html
+++ b/index.html
@@ -7,10 +7,18 @@
         <title> Javascript Basics Coding Quiz</title>
     </head>
     <body>
-        <button></button>
-        <div class="" id=""></div>
-        <div class="" id=""></div>
-        <div class="" id=""></div>
+        <header>
+            <span class="left" id="highScores">View high scores</span>
+            <span class="right" id="timer"> Timer</span>
+        </header>
+        <div class ="container">
+            <h1>Coding Quiz Challenge</h1>
+            <p id ="main">Try to answer the following code-related questions within the time limit.<br> Keep in mind that incorrect answers will penalize your score/time<br> by ten seconds!<br></p>
+            <button class="startqz" id="start-btn">Start Quiz</button> 
+         </div>
+
+        <!--Updated dynamically via Javascript-->
+
         <script src="script.js"></script>
     </body>
 </html>
