--- a/index.html
+++ b/index.html
@@ -45,14 +45,18 @@
                 </div>
                 <div class="evaluate"><p class="message"></p>
                 </div>
-
-                <section class="result" id="resultpage"></section>
+ 
             </section>
 
-           
-
+            <section class="result" id="resultpage" style="display:none">
+                <h1 id="done">All done!</h1>
+                <p id="score"> Your final score is:  </p>
+                <p id="Initial-Input">Enter Initial:  </p><button id="submit-btn">Submit</button>
+            </section>
 
         </main>
+
+      
 
         <footer id="displayscores" style="display:none;">
         <button id="scores"></button>
