accept merge conflicts

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
 
         <header> <!-- top section for display of high scores link and timer section-->
-            <a id="scores-btn">View high scores</a>
+            <a id="highscores-btn">View high scores</a>
             <section id="timer">
                 <p id=counter></p>
             </section>
@@ -28,19 +28,19 @@
             <section id="quiz"  style="display:none;">
                 <h2 id="questions"></h2>
                 <div class="options">
-                    <p class="opnum" data-number="1"></p>
+                    <!-- <p class="opnum" data-number="1"></p> -->
                     <p class="op1"></p>
                 </div>
                 <div class="options">
-                    <p class="opnum" data-number="2"></p>
+                    <!-- <p class="opnum" data-number="2"></p> -->
                     <p class="op2"></p>
                 </div>
                 <div class="options">
-                    <p class="opnum" data-number="3"></p>
+                    <!-- <p class="opnum" data-number="3"></p> -->
                     <p class="op3"></p>
                 </div>
                 <div class="options">
-                    <p class="opnum" data-number="4"></p>
+                    <!-- <p class="opnum" data-number="4"></p> -->
                     <p class="op4"></p>
                 </div>
                 <div class="evaluate"><p class="message"></p>
