--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <p id="score"> Your final score is:  </p>
                 <p>Enter Initials:
                 <input type="text" id="initial">
-                <input type="submit" id="submit-btn" onclick="showUserScore()">
+                <input type="submit" id="submit-btn">
                 </p>
             </section>
 
