edited display scores submit button styling

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <section class="result" id="resultpage" style="display:none">
                 <h1 id="done">All done!</h1>
                 <p id="score"> Your final score is:  </p>
-                <p>Enter Initials:
+                <p id="initialarea">Enter Initials:
                 <input type="text" id="initial">
                 <input type="submit" id="submit-btn">
                 </p>
