updated how to render score page

--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
 
         </main>
 
+        <section id="highscorepage" style="display:none;">
+            <h1>High Scores List</h1>
+        <p id="scoreslist"></p>
+        </section>
       
 
         <footer id="displayscores" style="display:none;">
